--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             </li>
           </ul>
         </address>
+
+        <button class="burger-btn" type="button" data-mobile-open>
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- #endregion -->
@@ -830,7 +836,7 @@
 
     <div class="modal-overlay" data-modal>
       <div class="modal">
-        <button class="close-btn" type="button">
+        <button class="close-btn" data-modal-close type="button">
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -912,11 +918,6 @@
       </div>
     </div>
     <!-- #endregion -->
-    <button class="burger-btn" type="button" data-menu-open>
-      <svg class="burger-icon" width="24" height="24">
-        <use href="./images/icons.svg#icon-burger"></use>
-      </svg>
-    </button>
     <!-- Mobile Menu -->
     <div class="mobile-menu" data-mobile>
       <button class="close-btn" type="button" data-mobile-close>
