--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <img
                 class="our-team-image"
                 srcset="./images/our-team/tom-ford-2x.jpg 2x"
-                src="./images/our-team/tom-ford-1x.jpg-1x.jpg"
+                src="./images/our-team/tom-ford-1x.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -298,7 +298,7 @@
               <img
                 class="our-team-image"
                 srcset="./images/our-team/camila-garcia-2x.jpg 2x"
-                src="./images/our-team/camila-garcia-1x.jpg-1x.jpg"
+                src="./images/our-team/camila-garcia-1x.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -371,7 +371,7 @@
               <img
                 class="our-team-image"
                 srcset="./images/our-team/daniel-wilson-2x.jpg 2x"
-                src="./images/our-team/daniel-wilson-1x.jpg-1x.jpg"
+                src="./images/our-team/daniel-wilson-1x.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -852,7 +852,10 @@
                 name="user-name"
                 id="user-name"
                 type="text"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐʼ]+"
               />
+
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
@@ -863,7 +866,16 @@
           <div class="form-field">
             <label class="form-label" for="phone">Phone</label>
             <div class="input-wrapper">
-              <input class="form-input" name="phone" id="phone" type="tel" />
+              <input
+                class="form-input"
+                name="phone"
+                id="phone"
+                type="tel"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
