--- a/index.html
+++ b/index.html
@@ -920,11 +920,10 @@
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href="" class="checkbox-link">Privacy Policy</a>
+              <a href="#" class="checkbox-link">Privacy Policy</a>
             </label>
           </div>
 
-          <!-- #region Submit Button -->
           <button class="form-submit" type="submit">Send</button>
         </form>
       </div>
